now wraps and has better padding

--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ body{
     position: relative;
     border: 2px solid;
     margin-bottom: 20px;
-    padding: 13px 25px;
+    padding: 13px 37px 13px 25px;
     list-style-type: none;
     border-radius: 7px;
     background-color: var(--white);
@@ -168,6 +168,7 @@ body{
     font-family: 'inter';
     font-size: 13px;
     font-weight: 500;
+    overflow-wrap: anywhere;
 }
 
 .todo li:nth-child(3n){
